--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: listview_ex
-description: A new Flutter package project.
+description: ListView With Header And Footer Support.
 version: 0.0.1
 homepage: https://github.com/ihou/listview_ex
 
